--- a/project0/index.html
+++ b/project0/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO App</title>
+    <link href="https://cdn.lineicons.com/2.0/LineIcons.css" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
@@ -14,8 +15,8 @@
 
       <section class="tracking">
         <div class="tracking__count">
-          <span>Item count: <span id="item-count"></span></span>
-          <span>Unchecked count: <span id="unchecked-count"></span></span>
+          <span>Items: <span id="tracking__count_item"></span></span>
+          <span>Unfinished: <span id="tracking__count_unchecked"></span></span>
         </div>
       </section>
 
@@ -26,15 +27,7 @@
       </section>
 
       <section class="list">
-        <ul id="listItems" class="list__items">
-          <li class="list__items_item">
-            <p class="list__items__item_text">Thing 1</p>
-            <div class="list__items__buttons">
-              <button class="list__items__buttons_finished">O</button>
-              <button class="list__items__buttons_delete">X</button>
-            </div>
-          </li>
-        </ul>
+        <ul id="listItems" class="list__items"></ul>
       </section>
     </div>
     <script src="./script.js"></script>
